update file status

--- a/index.html
+++ b/index.html
@@ -25,6 +25,124 @@
 
 <body>
 
+    <main>
+
+        <!-- start banner -->
+        <section class="banner">
+            <div class="banner-slider">
+                <div class="banner-item">
+                    <div class="single-banner" style="background-image: url('assets/img/banner/slider_1.jpg');">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-lg-8">
+                                    <div class="block-content">
+                                        <h1 class="banner-title">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                        </h1>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                            Vel ipsa architecto doloremque deserunt id eum autem ad sapiente earum quos!
+                                        </p>
+                                        <div class="btn-wrap">
+                                            <a href="#" class="btn">Get Started</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div><!-- end row -->
+                        </div><!-- end container -->
+                    </div><!-- end single banner -->
+                </div><!-- end banner item -->
+
+                <div class="banner-item">
+                    <div class="single-banner" style="background-image: url('assets/img/banner/slider_2.jpg');">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-lg-8">
+                                    <div class="block-content">
+                                        <h1 class="banner-title">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                        </h1>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                            Vel ipsa architecto doloremque deserunt id eum autem ad sapiente earum quos!
+                                        </p>
+                                        <div class="btn-wrap">
+                                            <a href="#" class="btn">Get Started</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div><!-- end row -->
+                        </div><!-- end container -->
+                    </div><!-- end single banner -->
+                </div><!-- end banner item -->
+
+                <div class="banner-item">
+                    <div class="single-banner" style="background-image: url('assets/img/banner/slider_3.jpg');">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-lg-8">
+                                    <div class="block-content">
+                                        <h1 class="banner-title">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                        </h1>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                            Vel ipsa architecto doloremque deserunt id eum autem ad sapiente earum quos!
+                                        </p>
+                                        <div class="btn-wrap">
+                                            <a href="#" class="btn">Get Started</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div><!-- end row -->
+                        </div><!-- end container -->
+                    </div><!-- end single banner -->
+                </div><!-- end banner item -->
+
+            </div><!-- end banner slider -->
+        </section><!-- end banner -->
+
+        <div class="product-area section-padding">
+            <div class="product-slider">
+                <div class="product-item">
+                    <div class="single-product">
+                        <img src="assets/img/products/product_1.jpg" alt="">
+                    </div>
+                </div>
+                <div class="product-item">
+                    <div class="single-product">
+                        <img src="assets/img/products/product_2.jpg" alt="">
+                    </div>
+                </div>
+                <div class="product-item">
+                    <div class="single-product">
+                        <img src="assets/img/products/product_3.jpg" alt="">
+                    </div>
+                </div>
+                <div class="product-item">
+                    <div class="single-product">
+                        <img src="assets/img/products/product_4.jpg" alt="">
+                    </div>
+                </div>
+                <div class="product-item">
+                    <div class="single-product">
+                        <img src="assets/img/products/product_5.jpg" alt="">
+                    </div>
+                </div>
+                <div class="product-item">
+                    <div class="single-product">
+                        <img src="assets/img/products/product_6.jpg" alt="">
+                    </div>
+                </div>
+                <div class="product-item">
+                    <div class="single-product">
+                        <img src="assets/img/products/product_4.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
 
 
     <!-- All Javascript Here -->
